test/invalid/baseline/sharedarraybuffer.txt
Syntax error at line 1 in sharedarraybuffer.webidl:
interface SharedArrayBuffer {};
          ^ Missing name in interface
